--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ h1,h3,h4
 </h4>
 
 	<!--- Create Canvas--->
-<canvas id="myCanvas" width="800" height="400"></canvas>
+<canvas width="800" height="400" id="myCanvas"></canvas>
 
 </center>
 <script src="main.js">
